tests/error/struct_errors/stray_docstring.err
Error: Unexpected statement (at $FILE:7:4)
  | 
5 | class MyStruct:
6 |     x: int
7 |     """Docstring in wrong position"""
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Unexpected statement in struct definition

Guppy compilation failed due to 1 previous error
